Table ships {
    id serial [pk]
    name text [not null]
    area box [not null]
}

Table locations {
    id serial [pk]
    ship_id int [not null, REF: > ships.id]
    area box [not null]
}

Table actions {
    id serial [pk]
    name text [unique, not null]
}

Table states {
    id serial [pk]
    current_state text [unique, not null]
}

Table people {
    id serial [pk]
    name text [not null]
}

Table people_actions {
    people_id int [pk, not null, REF: > people.id]
    action_id int [pk, not null, REF: > actions.id]
    timestamp timestamp [not null]
    location_id int [not null, REF: > locations.id]
}

Table items {
    id serial [pk]
    name text [not null, unique]
}

Table people_items {
    people_id int [pk, not null, REF: > people.id]
    item_id int [pk, not null, REF: > items.id]
}

Table smoke_detectors {
    id serial [pk]
    location_id int [not null, REF: > locations.id]
}

Table smoke_detectors_states {
    smoke_detector_id int [pk, REF: > smoke_detectors.id]
    state_id int [pk, not null, REF: > states.id]
    timestamp timestamp [not null]
}

Table fire_alarms {
    id serial [pk]
    ship_id int [not null, REF: > ships.id]
    caused_by_id int [not null, REF: > smoke_detectors.id]
    alarm_ts timestamp [not null]
}